# spotify-data-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: get_refresh_token.py
src/spotify_pipeline/: config.py  logging.py
src/spotify_pipeline/client/: spotify.py
src/spotify_pipeline/extraction/: extractor.py
src/spotify_pipeline/orchestration/: pipeline.py
src/spotify_pipeline/storage/: warehouse.py
src/spotify_pipeline/transformation/: transformer.py
src/spotify_pipeline/validation/: models.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_client.py  test_models.py  test_transformer.py
